--- a/index.html
+++ b/index.html
@@ -9,29 +9,45 @@
 </head>
 <body>
     <div class="nav">
-        <h2>Cheatsheets</h2>
+        <h2><a href="#">Cheatsheets</a></h2>
         <ul>
-            <li>Home</li>
-            <li>About</li>
+            <li><a href="html.html">HTML</a></li>
+            <li><a href="css.html">CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">React</a></li>
+            <li><a href="#">Git/Github</a></li>
         </ul>
         <div class="search">
-            <input type="text" placeholder="Search Here">
+            <input type="text" placeholder="Language">
             <button class="btn">Search</button>
         </div>
     </div>
 
     <div class="main">
         <div class="sidebar">
-            <h2 class="center">HTML CheatSheet</h2>
+            <h2 class="center">CheatSheets</h2>
             <ul class="item">
-                
-
-
+                <li><a href="html.html">HTML</a></li>
+                <li><a href="css.html">CSS</a></li>
+                <li><a href="#">JavaScript</a></li>
+                <li><a href="#">React</a></li>
+                <li><a href="#">Git/Github</a></li>
             </ul>
         </div>
         <div class="mainside">
+            <h1>All Language CheatSheet at One Place</h1>
+            <img src="./img.jpeg" alt="">
+            <div class="ul">
+                <h1>Select Your Lanuage</h1>
+                <ul class="item">
+                    <li><a href="html.html">HTML</a></li>
+                    <li><a href="css.html">CSS</a></li>
+                    <li><a href="#">JavaScript</a></li>
+                    <li><a href="#">React</a></li>
+                    <li><a href="#">Git/Github</a></li>
+                </ul>
+            </div>
             
     </div>
 </body>
-<script src="file.js"></script>
 </html>
