--- a/css.html
+++ b/css.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Templates</title>
     <link rel="stylesheet" href="html.css">
+    <link rel="stylesheet" href="utils.css">
+    
 </head>
 <body>
     <div class="nav">
@@ -34,7 +36,10 @@
         </div>
         <div class="mainside">
             
-    </div>
+<div class="flex items-center justify-center my-md ">
+    <a type="" class="btn nounderline" href="utils.css" download>Download utils.csss</a>
+</div>
+        </div>
 </body>
 <script src="css.js"></script>
 </html>
